--- a/create_deb_package_sources/steamgiftsbot/etc/steam_gifts/settings.cfg
+++ b/create_deb_package_sources/steamgiftsbot/etc/steam_gifts/settings.cfg
@@ -1,8 +1,8 @@
 [cookies]
-PHPSESSID=secret
+PHPSESSID=blah_blah_blah
 
 [user-agent]
-user-agent = Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:66.0) Gecko/20100101 Firefox/66.0
+user-agent = user-agent = Mozilla/5.0 (X11; Linux x86_64; rv:121.0) Gecko/20100101 Firefox/121.0
 
 [settings]
 giveaways_from_banners=1
@@ -10,7 +10,7 @@ group=1
 wishlist=1
 search_list=1
 random_list=1
-send_notify=0
+send_notify=1
 beep=1
 threshold=10
 silent_mode_at_night=1
