--- a/settings.cfg
+++ b/settings.cfg
@@ -2,7 +2,7 @@
 PHPSESSID=blah_blah_blah
 
 [user-agent]
-user-agent = Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:66.0) Gecko/20100101 Firefox/66.0
+user-agent = user-agent = Mozilla/5.0 (X11; Linux x86_64; rv:121.0) Gecko/20100101 Firefox/121.0
 
 [settings]
 giveaways_from_banners=1
