--- a/settings.cfg
+++ b/settings.cfg
@@ -8,6 +8,7 @@ user-agent = user-agent = Mozilla/5.0 (X11; Linux x86_64; rv:121.0) Gecko/201001
 giveaways_from_banners=1
 group=1
 wishlist=1
+recommended=1
 search_list=1
 random_list=1
 send_notify=1
